# TreehornX

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  treehornx.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  treehornx.doctree
.github/workflows/: .readthedocs.yaml  docs.yml  static.yml  test.yml
_sources/: index.rst.txt  modules.rst.txt  treehornx.rst.txt
docs/source/: conf.py
src/treehornx/: ci.py
src/treehornx/ir/: __init__.py  enviroment.py  errors.py  expressions.py  function.py  instructions.py  sorts.py  utils.py
src/treehornx/ir/_internal/sorts/: Enum.py  Sort.py  Struct.py  __init__.py  natives.py
src/treehornx/parser/: CParser.py  Parser.py
src/treehornx/parser/_internal/cparser/: CASTVisitor.py  EnumDeclVisitor.py  ExprVisitor.py  FileVisitor.py  FuncDefVisitor.py  ScopeStack.py  StructDeclVisitor.py  errors.py
tests/unit/: __init__.py  test_ci.py
tests/unit/_internal/cparser/: CASTVisitor_test.py  ScopeStack_test.py
tests/unit/ir/: enviroment_test.py  expressions_test.py  function_test.py  instructions_test.py  sorts_test.py
