[project]
name = "treehornx"
version = "0.1.0"
description = "framework for formal verification of tree-manipulating programs on dynamic memory"
authors = [{ name = "Nicola Gentile", email  = "nicola.gentile.developer@gmail.com" }, {name = "Marco Faella"}, {name = "Gennaro Parlato"}]
maintainers = [{ name = "Nicola Gentile", email = "nicola.gentile.developer@gmail.com" }, {name = "marco Faella"}]
readme = { file = "README.md", content-type = "text/markdown" }
# license = { file = "LICENSE" }
keywords = ["programming languages", "program verification", "formal methods", "static analysis"]
requires-python = ">=3.12"
dependencies = [
    "frozendict",
    "pysmt",
    "libclang",
    "clang"
]

[dependency-groups]
dev = [
    "ruff",
    "pylint",
    "pyright",
    "pytest",
    "pytest-cov",
    "taskipy",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src/treehornx"]

[tool.ruff]
target-version = "py312"
src = ["src, tests"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
exclude = ["docs/*"]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "PL",   # Pylint
    "RUF",  # Ruff-specific rules
]
ignore = ["N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]
known_first_party = ["treehornx"]
force_single_line = false
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
multi_line_output = 3
order_by_type = true
group_by_package = true
color_output = true

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
extraPaths = ["src/treehornx"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingModuleSource = true
reportUnusedImport = "information"
reportImportCycles = "warning"
reportDuplicateImport = "information"

# Type safety and checking
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportIncompatibleMethodOverride = true
reportInconsistentConstructor = true
reportMissingTypeStubs = true

# Unknown or missing type info
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownMemberType = true

# Type checking strictness and typing issues
reportInvalidTypeArguments = true
reportInvalidTypeVarUse = true
reportUntypedFunctionDecorator = true
reportUnnecessaryIsInstance = "information"
reportUnnecessaryComparison = "information"
reportUnsupportedDunderAll = true

# Code structure and flow
reportUnboundVariable = true
reportAssertAlwaysTrue = "information"
reportConstantRedefinition = "information"
reportPrivateUsage = true
reportSelfClsParameterName = true

# Override behavior
reportImplicitOverride = "warning"

# Maintenance and code hygiene
reportUnusedClass = "information"
reportUnusedFunction = "information"
reportUnusedVariable = "information"
reportUnnecessaryTypeIgnoreComment = true

# Stubs and internal issues
reportInvalidStubStatement = true
reportInvalidStringEscapeSequence = true

[tool.taskipy.tasks]
unit-test = "pytest"
coverage = "coverage run -m pytest --cov=src/treehornx --cov-report=term-missing --cov-report=html --cov-fail-under=85 --cov-branch tests/unit"
format = "ruff format && isort . "
validate = "isort --check . && ruff format --check && ruff check && pyright"
test = "task unit-test"
verify = "task format && task validate && task coverage"
build = "task validate && task test"
docs = "cd docs && sphinx-build -b html source build/html && cd ../"
docs-clean = "rm -rf docs/build"
docs-serve = "cd docs/build/html && python -m http.server 8000"
